# tldrify

./: README.md  docker-compose.yaml  tldrify.code-workspace
.github/workflows/: deploy.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
frontend/: .env.example  .prettierrc.json  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  site.conf  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  client.d.ts  index.css  main.tsx
frontend/src/components/: app-sidebar.tsx  chat-message.tsx  chat.tsx  not-found.tsx  settings-panel.tsx  slider-control.tsx
frontend/src/components/ui/: button.tsx  input.tsx  label.tsx  scroll-area.tsx  select.tsx  sheet.tsx  sidebar.tsx  slider.tsx  tooltip.tsx
frontend/src/hooks/: use-file-upload.ts  use-slider-with-input.ts
frontend/src/lib/: db.ts  router.ts
