[project]
name = "tldrify"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "markitdown[all]>=0.1.3",
    "openai>=1.107.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]

[tool.ruff]
preview = true
line-length = 120

[tool.ruff.lint]
extend-select = ["I", "UP"]
isort.split-on-trailing-comma = false
